app/styles/module/overlay/_overlay.scss
.overlay {
	display: none;
	
	position: fixed;
	top: 0; right: 0; bottom: 0; left: 0;
	z-index: 9999;
}

.overlay-bg {
	position: absolute;
	width: 100%; height: 100%;
	background: rgba(white, 0.3);
}

body.overlay-open {
	.container {
		@include transition(all 0.3s ease-out);
		-webkit-filter: blur(10px);
	}

	.overlay {
		display: block;
	}
}

